<resources>
    <string name="app_name">Karanel</string>
    <string name="home">Home</string>
    <string name="data_orang_tua">Data Orang Tua</string>
    <string name="profile">Profile</string>
    <string name="retake">Retake</string>
    <string name="add_parent">add parent</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="title_code_tracking">Pastikan anda menyimpan Kode Tracking Berikut:</string>
    <string name="description_code_tracking">Kode berikut bisa anda screenshot atau download pada menu di bawah</string>
    <string name="download">Download</string>
    <string name="child_data">Data Anak</string>
    <string name="add_new_child">Input Anak Baru</string>
    <string name="my_graphic">Grafik-Ku</string>
    <string name="add_progress">Input Data Perkembangan</string>
    <string name="cancel">Batal</string>
    <string name="save">Simpan</string>
    <string name="stunting_child">Anak Stunting</string>
    <string name="healty_child">Anak Sehat</string>
    <string name="total_child">Jumlah Anak</string>
    <string name="total_parent">Jumlah Orangtua</string>
    <string name="next">Selanjutnya</string>
    <string name="log_out">Keluar</string>
    <string name="my_history">History-Ku</string>
    <string name="baby_status">Status Bayi Anda</string>
    <string name="baby_age">Umur Bayi</string>
    <string name="baby_weight">Berat Badan Bayi</string>
    <string name="baby_height">Panjang/Tinggi Badan Bayi</string>
    <string name="baby_head_circumference">Lingkar Kepala Bayi</string>
    <string name="input_growth_data">Input Data Pertumbuhan</string>
    <string name="edit_child_profile">Edit Profil Anak</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="download_id_karanel">Download ID Karanel</string>
    <string name="total_child_stunting">Jumlah Anak Stunting</string>
    <string-array name="gender">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>