<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_8"
            app:srcCompat="@drawable/ic_arrow_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_toEndOf="@id/btn_back"
            android:text="Grafik PB-TB/U"
            android:textColor="@color/text_primary_color"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_toolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="WebViewLayout">

            <WebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:background="@drawable/bg_pbu_status"
                android:padding="@dimen/margin_16">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_height_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_height"
                    android:textColor="@color/text_primary_color_60"
                    android:textSize="@dimen/normal_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:textColor="@color/text_primary_color"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_height_title"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    tools:text=": 63 cm" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_age_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/baby_age"
                    android:textColor="@color/text_primary_color_60"
                    android:textSize="@dimen/normal_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_height_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:textColor="@color/text_primary_color"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_age_title"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    tools:text=": 4 Bulan" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_status_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/baby_status"
                    android:textColor="@color/text_primary_color_60"
                    android:textSize="@dimen/normal_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_age_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:textColor="@color/text_primary_color"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_status_title"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    tools:text=": Gizi Baik" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="tv_height_title, tv_age_title,tv_status_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/my_history"
                android:textColor="@color/text_primary_color"
                android:textSize="@dimen/big_text_size"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_status_title"
                app:layout_constraintStart_toEndOf="@id/barrier" />

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16">

                <TableRow android:layout_weight="1">

                    <TextView
                        android:layout_column="1"
                        android:layout_weight=".1"
                        android:padding="@dimen/margin_8"
                        android:text="Umur"
                        android:textColor="@color/text_grey_color" />

                    <TextView
                        android:layout_column="2"
                        android:layout_weight=".3"
                        android:padding="@dimen/margin_8"
                        android:text="Status Bayi"
                        android:textColor="@color/text_grey_color" />

                    <TextView
                        android:layout_column="3"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:padding="@dimen/margin_8"
                        android:text="Tanggal"
                        android:textColor="@color/text_grey_color" />

                    <TextView
                        android:layout_column="4"
                        android:layout_weight=".1"
                        android:gravity="center"
                        android:padding="@dimen/margin_8"
                        android:text="PB/TB"
                        android:textColor="@color/text_grey_color" />

                    <TextView
                        android:layout_weight=".1"
                        android:gravity="center"
                        android:padding="@dimen/margin_8"
                        android:text="Aksi"
                        android:textColor="@color/text_grey_color" />
                </TableRow>
            </TableLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <include
        android:id="@+id/view_state"
        layout="@layout/view_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>